--- a/themes/mongodb/layout.html
+++ b/themes/mongodb/layout.html
@@ -17,7 +17,7 @@
 {%- endmacro -%}
 
 {%- macro editlink(type) -%}
-  <a class="edit-link" href="https://github.com/{{ github_organization }}/{{theme_repo_name}}/edit/{{theme_branch}}/locale/zh/LC_MESSAGES/{{pagename}}.po" target="_blank" title="直接在Github上翻译或者纠错本页面">
+  <a class="edit-link" href="docs.mongoing.com:8080/?name={{pagename}}" target="_blank" title="直接在Github上翻译或者纠错本页面">
     {% if type == 'icon' %}
       <span class="icon-edit"></span> <span>翻译或纠错本页面</span>
     {% else %}
